temp/bold-upgrade-center-trailing-slash.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"bold-upgrade-center-trailing-slash","namespace":"bold-upgrade-center"},"spec":{"redirectRegex":{"permanent":true,"regex":"^(https?://[^/]+/upgrade-center)$","replacement":"${1}/"}}}
  creationTimestamp: "2026-09-23T10:16:15Z"
  generation: 1
  name: bold-upgrade-center-trailing-slash
  namespace: bold-upgrade-center
  resourceVersion: "1790158575451199015"
  uid: bc2c6689-16b7-4bbb-8b9c-87c7582ba8a1
spec:
  redirectRegex:
    permanent: true
    regex: ^(https?://[^/]+/upgrade-center)$
    replacement: ${1}/
